--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-plotly
-pandas
-pypdf2
-python-docx
-pillow
-nbformat
-zipfile
+streamlit==1.20.0
+plotly==5.11.0
+pandas==1.5.3
+pypdf2==3.0.1
+python-docx==0.8.11
+pillow==9.3.0
+nbformat==5.7.0
